add storage and clients repo, implement register client handler, add swagger UI, refactor
